--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <title>Neo Neofotistos Portfolio</title>
 </head>
 
 <body>
     <div class="header">
-    <h1>Neo Neofotistos</h1>
+    <h1 class="title">Neo Neofotistos</h1>
     <p>Software Engineer with a passion for video games, animation, and music. 
         Aspiring to create through these passions in ways that can connect with people. 
         Always looking for unique ways to solve problems.</p>
     </div>
     <div class="skills"></div>
     <h2>Skills</h2>
-    <ul class="list1">
+    <ul>
         <li>
             JavaScript
         </li>
@@ -35,7 +37,7 @@
             CSS3
         </li>
     </ul>
-    <ul class="list2">
+    <ul>
         <li>
             Flask
         </li>
@@ -52,7 +54,7 @@
             Mongoose
         </li>
     </ul>
-    <ul class="list3">
+    <ul>
         <li>
             Django
         </li>
