--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Always looking for unique ways to solve problems.</p>
     </div>
     <div class="skills"></div>
-    <h2>Skills</h2>
+    <h2 class="subtitle">Skills</h2>
     <ul>
         <li>
             JavaScript
@@ -73,9 +73,9 @@
     </ul>
     </div>
     <div class="projects">
-    <h2>Projects</h2>
+    <h2 class="subtitle">Projects</h2>
         <a href="#" class="projects_item">
-            <!-- Image -->
+            <a href="https://nneofotistos.github.io/shmup-game/"></a><img src="assets/project1.png" alt="shmup game"></a>
         </a>
     </div>
     <div class="footer">
