--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     <div class="projects">
     <h2 class="subtitle">Projects</h2>
         <a href="#" class="projects_item">
-            <a href="https://nneofotistos.github.io/shmup-game/"></a><img src="assets/project1.png" alt="shmup game"></a>
+            <a href="https://nneofotistos.github.io/shmup-game/"><img src="assets/project1.png" alt="shmup game"></a>
+            <a href="https://github.com/nneofotistos/anime_list"><img src="assets/project2.png" alt="anime anime_list"></a>
+            <a href="https://github.com/nneofotistos/django-library/tree/main/mysite"><img src="assets/project3.png" alt="django library"></a>
         </a>
     </div>
     <div class="footer">
