--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
     <div class="header">
     <h1 class="title">Neo Neofotistos</h1>
-    <p>Software Engineer with a passion for video games, animation, and music. 
+    <p class="about-me">Software Engineer with a passion for video games, animation, and music. 
         Aspiring to create through these passions in ways that can connect with people. 
         Always looking for unique ways to solve problems.</p>
     </div>
-    <div class="skills"></div>
+    <div class="skills">
     <h2 class="subtitle">Skills</h2>
+    <div class="menu-wrap">
     <ul>
         <li>
             JavaScript
@@ -71,6 +72,7 @@
             GitHub
         </li>
     </ul>
+    </div>
     </div>
     <div class="projects">
     <h2 class="subtitle">Projects</h2>
